# Back

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/v1/: api.py
src/core/: config.py  connection.py  database.py  di.py  exception_handlers.py  exceptions.py  schemas.py  security.py
src/core/exception/: exception_handlers.py  exceptions.py
src/domains/assistant/: clients.py  exceptions.py  llm_handler.py  parser.py  prompt_builder.py  schemas.py  service.py
src/domains/ingredient/: exceptions.py  models.py  repository.py  schemas.py  service.py
src/domains/recipe/: exception.py  models.py  repository.py  schemas.py  service.py
src/domains/refrigerator/: exception.py  models.py  repository.py  schemas.py  service.py
src/domains/shopping/: exception.py  models.py  repository.py  schemas.py  service.py
src/domains/user/: exceptions.py  models.py  repository.py  schemas.py  service.py
src/util/: docs.py
tests/: conftest.py  test_main.py
tests/domains/assistant/: test_assistant_api.py  test_assistant_handler.py  test_assistant_service.py
tests/domains/ingredient/: test_ingredient_api.py  test_ingredient_repository.py  test_ingredient_service.py
tests/domains/recipe/: test_recipe_api.py  test_recipe_repository.py  test_recipe_service.py
tests/domains/refrigerator/: test_refrigerator_api.py  test_refrigerator_repository.py  test_refrigerator_service.py
tests/domains/shopping/: test_shopping_api.py  test_shopping_repository.py  test_shopping_service.py
tests/domains/user/: test_user_api.py  (+2 more)
(+6 files in other folders)
